# dexcontrol

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  test.py
examples/: analyze_stage_direction_to_md.py  stage_direction_report_0.3.md  stage_direction_report_0.7.md  stage_direction_report_0.9.md  stage_direction_report_0.99.md  stage_direction_report_last240.md  test_arm_dynamics.py  test_cartesian_axes.py  test_latency_profile.py  test_quick_5steps.py
examples/advanced_examples/: admittance_control.py  chassis_s_curve.py  config_arm_pid.py  config_ee_baud_rate.py  config_force_torque_sensor.py  control_customized_ee.py  disable_arm_motors.py  fold_arms.py  fold_robot.py  heartbeat_monitor_demo.py  init_arm_safe.py  joint_admittance_control.py  keyboard_joint_control.py  move_arm_ee_simple.py  recover_joint_limit.py  replay_trajectory.py
examples/advanced_examples/move_to_pose/: move_torso_to_pose.py
examples/basic_examples/control/: move_arm.py  move_chassis.py  move_torso.py  move_torso_relative.py
examples/basic_examples/sensors/: get_2d_lidar_data.py  get_3d_lidar_data.py  get_arm_button_state.py  get_chassis_cam_data.py  get_hand_touch_data.py  get_head_cam_data.py  get_head_zed_x_mini_data.py  get_imu_data.py  get_lidar_data.py  get_live_2d_lidar_data.py  get_live_lidar_data.py  get_robot_state.py  get_ultrasonic_sensor.py  get_wrist_camera_data.py  get_wrist_zed_x_one_data.py
examples/benchmark/: connection_benchmark.py  gil_benchmark.py
examples/benchmark/arm_tracking/: README.md  common.py  sin_benchmark.py  step_benchmark.py
examples/benchmark/connection/: README.md  connect_robot_latency.py
examples/teleop/: arm_cartesian_teleop.py  arm_joints_teleop.py  base_arm_teleop.py  chassis_head_teleop.py
examples/troubleshooting/: clear_error.py  display_robot_info.py
proto/: README.md  __init__.py  compile_proto.sh  robotenv.proto  robotenv_pb2.py  robotenv_pb2_grpc.py
src/dexcontrol/: __init__.py  exceptions.py  robot.py
src/dexcontrol/apps/: dualsense_teleop_base.py
src/dexcontrol/comm/: __init__.py  rtc.py
src/dexcontrol/config/: __init__.py
src/dexcontrol/core/: arm.py  chassis.py  component.py  config.py  hand.py  head.py  misc.py  robot_env_client.py  robot_env_factory.py  robot_query_interface.py  robotiq_gripper.py  torso.py
src/dexcontrol/sensors/: __init__.py  manager.py  ultrasonic.py
(+18 files in other folders)
